Tests/Examples/bad/lambda-calculus/pairs.lifp

(func mkPair (a b)
	(lambda (f)
		(f a b)
	)
)

(func K (x y) x)
(func Ks (x y) y)

(func fst (p)
	(p K)
)

(func snd (p)
	(p Ks)
)
